fixed tailwind jspdf compatibility with alignment with img displayed inline-block

--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,6 @@ body,
     color: #000 !important;
   }
 }
+img {
+  display: inline-block;
+}
